force-app/main/default/objects/Int_Party_Street_Address__c/Int_Party_Street_Address__c.object-meta.xml
<CustomObject>
    <description>Int Party Street Address</description>
    <label>Int Party Street Address</label>
    <nameField>
        <displayFormat>PSA-{0000000000}</displayFormat>
        <label>Party Street Address Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Party Street Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>