force-app/main/default/objects/Int_Party_Street_Address__c/fields/Party_Address_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Party_Address_Type_Code__c</fullName>
    <description>Party Adress Type Code</description>
    <label>Party Address Type Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>