force-app/main/default/objects/Int_Party_Street_Address__c/fields/Party_Source_System__c.field-meta.xml
<CustomField>
    <fullName>Party_Source_System__c</fullName>
    <description>Party Source System</description>
    <label>Party Source System</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>