force-app/main/default/objects/Int_Party_Street_Address__c/fields/Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Post_Code__c</fullName>
    <description>Post Code</description>
    <label>Post Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>