force-app/main/default/objects/Int_Party_Street_Address__c/fields/Town_Name__c.field-meta.xml
<CustomField>
    <fullName>Town_Name__c</fullName>
    <description>Town Name</description>
    <label>Town Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>